--- a/src/app/components/users-page/users-page.component.html
+++ b/src/app/components/users-page/users-page.component.html
@@ -15,3 +15,9 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<ng-template #portalContent>
+  <button mat-fab color="accent">
+    <mat-icon>add</mat-icon>
+  </button>
+</ng-template>
