--- a/src/app/components/orders-page/orders-page.component.html
+++ b/src/app/components/orders-page/orders-page.component.html
@@ -15,3 +15,19 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<ng-container *cdkPortal>
+  <button
+    mat-fab
+    color="accent"
+  >
+    <mat-icon>search</mat-icon>
+  </button>
+  <button
+    mat-fab
+    color="warn"
+    class="button"
+  >
+    <mat-icon>map</mat-icon>
+  </button>
+</ng-container>
